--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,3 +1,9 @@
-html, body{
+html,
+body {
   font-size: 10px;
+  --color-board-black: #b7c0d8;
+  --color-white: #e8edf9;
+  --color-piece-black: #34364c;
+  --color-piece-white: #f4f7fa;
+  --color-primary: #7b61ff;
 }
