--- a/styles/base.scss
+++ b/styles/base.scss
@@ -6,4 +6,7 @@ body {
   --color-piece-black: #34364c;
   --color-piece-white: #f4f7fa;
   --color-primary: #7b61ff;
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--color-piece-white);
+  color: var(--color-piece-white);
 }
